Revert "remove file exporter from otel-collector"
This reverts commit aee5add5b23c787ed310f17cbb08948a55a8c83f.

--- a/config/otel-collector/otel-collector-config.yml
+++ b/config/otel-collector/otel-collector-config.yml
@@ -6,6 +6,8 @@ receivers:
 
 exporters:
   logging:
+  file:
+    path: /data/otel-collector/otel.json
   prometheus:
     endpoint: 0.0.0.0:8889
   otlp/2:
@@ -16,10 +18,10 @@ service:
   pipelines:
     traces:
       receivers: [otlp]
-      exporters: [logging,otlp/2]
+      exporters: [logging,file,otlp/2]
     metrics:
       receivers: [otlp]
-      exporters: [logging,prometheus]
+      exporters: [logging,file,prometheus]
     logs:
       receivers: [otlp]
-      exporters: [logging]
+      exporters: [logging,file]
