add jaeger exporter (with opensearch behind) for otel-collector

--- a/config/jenkins/jenkins.yml
+++ b/config/jenkins/jenkins.yml
@@ -5,3 +5,7 @@ unclassified:
     authentication: "noAuthentication"
     endpoint: "http://localhost:55680"
     exportOtelConfigurationAsEnvironmentVariables: true
+    observabilityBackends:
+      - jaeger:
+          jaegerBaseUrl: "http://localhost:16686"
+          name: "Jaeger"
